--- a/public/index.css
+++ b/public/index.css
@@ -4,7 +4,7 @@
   src: url("fonts/vazir/Vazir.eot?#iefix") format("embedded-opentype"),   /* IE6-IE8 */
     url("fonts/vazir/Vazir.ttf") format("truetype"),    /* Super Modern Browsers */
     url("fonts/vazir/Vazir.woff") format("woff"),   /* Pretty Modern Browsers */
-    url("fonts/vazir/Vazir.woff") format("woff2"),  /* Safari, Android, iOS */
+    url("fonts/vazir/Vazir.woff2") format("woff2"),  /* Safari, Android, iOS */
     url("fonts/vazir/Vazir.svg#svgvazir") format("svg");    /* legacy iOS */
 }
 * {
